--- a/mail/email.html
+++ b/mail/email.html
@@ -1408,7 +1408,7 @@
                                 </td>
                               </tr>
                             </table>
-                            <table
+                            <!-- <table
                               border="0"
                               cellpadding="0"
                               cellspacing="0"
@@ -1427,9 +1427,7 @@
                                     padding-top: 20px;
                                     padding-bottom: 5px;
                                   "
-                                >
-                                  <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.test-url.com" style="height:42px;width:124px;v-text-anchor:middle;" arcsize="0%" stroke="false" fillcolor="#63a6a6"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Tahoma, Verdana, sans-serif; font-size:14px"><!
-                                  [endif]--><a
+                                ><a
                                     href="https://www.test-url.com"
                                     style="
                                       text-decoration: none;
@@ -1477,10 +1475,9 @@
                                       ></span
                                     ></a
                                   >
-                                  <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
                                 </td>
                               </tr>
-                            </table>
+                            </table> -->
                           </th>
                         </tr>
                       </tbody>
@@ -3598,7 +3595,7 @@
                                 </td>
                               </tr>
                             </table>
-                            <table
+                            <!-- <table
                               border="0"
                               cellpadding="0"
                               cellspacing="0"
@@ -3642,7 +3639,7 @@
                                   </div>
                                 </td>
                               </tr>
-                            </table>
+                            </table> -->
                             <table
                               border="0"
                               cellpadding="0"
@@ -3936,7 +3933,7 @@
                                 </td>
                               </tr>
                             </table>
-                            <table
+                            <!-- <table
                               border="0"
                               cellpadding="0"
                               cellspacing="0"
@@ -3980,7 +3977,7 @@
                                   </div>
                                 </td>
                               </tr>
-                            </table>
+                            </table> -->
                             <table
                               border="0"
                               cellpadding="0"
