--- a/mail/email.html
+++ b/mail/email.html
@@ -3595,7 +3595,7 @@
                                 </td>
                               </tr>
                             </table>
-                            <!-- <table
+                            <table
                               border="0"
                               cellpadding="0"
                               cellspacing="0"
@@ -3639,7 +3639,7 @@
                                   </div>
                                 </td>
                               </tr>
-                            </table> -->
+                            </table>
                             <table
                               border="0"
                               cellpadding="0"
@@ -3933,7 +3933,7 @@
                                 </td>
                               </tr>
                             </table>
-                            <!-- <table
+                            <table
                               border="0"
                               cellpadding="0"
                               cellspacing="0"
@@ -3977,7 +3977,7 @@
                                   </div>
                                 </td>
                               </tr>
-                            </table> -->
+                            </table>
                             <table
                               border="0"
                               cellpadding="0"
